--- a/poo-paint/poo-paint/poo-paint.csproj
+++ b/poo-paint/poo-paint/poo-paint.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2E2DBE5A-1CBB-477A-87A3-3AD7121E716B}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{B47812C5-7831-44B5-A197-4EAFDD428907}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>retangulo</RootNamespace>
-    <AssemblyName>retangulo</AssemblyName>
+    <RootNamespace>poo_paint</RootNamespace>
+    <AssemblyName>poo-paint</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,9 +31,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,11 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="AreaDeDesenho.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AreaDeDesenho.Designer.cs">
+      <DependentUpon>AreaDeDesenho.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Circulo.cs" />
+    <Compile Include="Figura.cs" />
+    <Compile Include="Principal.cs" />
+    <Compile Include="Retangulo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AreaDeDesenho.resx">
+      <DependentUpon>AreaDeDesenho.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
